GNOME Bugzilla – Bug 756560
the very last stage of file copy presents an ugly popover
Last modified: 2015-11-12 20:49:48 UTC
Created attachment 313250 [details] narrow blank popover When I copy large files over to a smb:// share, the last stage where it feels like 100%, but is still flushing the cache, the popover is black narrow ugliness that we probably don't want to show. Screenshot attached.
Cannot reproduce here... suposedly the operations are not removed until 3 seconds with the button untoggled passed. Does it always happens to you? Which operation were you performing?
(In reply to Carlos Soriano from comment #1) > Does it always happens to you? Which operation were you performing? Copying mp3s from a local drive to a mounted samba share. And yea I was able to reproduce it. Screencast attached.
Created attachment 313369 [details] screencast of the issue
Created attachment 315371 [details] [review] toolbar: avoid empty operations popover We need to check that all windows have the popover hidden to remove the operations, if not, what happens is that if one of the windows has it hidden it removes its operations and all the other popovers become empty. The code is not very beautiful since we have to access all the toolbars of all the windows, which is kind of breaking the design, but well... creating a "operations toolbar manager" just for this looks overkill.
Attachment 315371 [details] pushed as e5163ba - toolbar: avoid empty operations popover